change style of title to add contrast to background and fixed possitioning of the results section so it wont overlap content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,13 @@ body {
     overflow: auto;
 }
 
+/** title **/
+
+#gamename {
+    text-shadow: 0 0 6px #000000;
+    color: #ffffff;
+}
+
 /** Icon **/
 
 .icon {
@@ -258,7 +265,7 @@ body {
     .center-content {
         position: absolute;
         margin-top: 0;
-        top: 480px;
+        top: 570px;
         left: 50%;
         transform: translate(-50%, -50%);
         display: flex;
